[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Combat/Bullet.gd" type="Script" id=1]
[ext_resource path="res://Assets/Tileset/original_uv_textured.png" type="Texture" id=2]
[ext_resource path="res://palette_swap.material" type="Material" id=3]
[ext_resource path="res://Scenes/RandomizedAudioPlayer.gd" type="Script" id=4]
[ext_resource path="res://Sounds/160077__jorickhoofd__metal-container-impact-firm.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[node name="Bullet" type="KinematicBody2D"]
z_index = 5
collision_layer = 4
script = ExtResource( 1 )
damping = 0.9973
NumBounces = 0

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 3 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 208, 256, 16, 16 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="VisibilityNotifier" type="VisibilityNotifier2D" parent="."]
visible = false
scale = Vector2( 0.8, 0.8 )

[node name="DieAfter" type="Timer" parent="."]
one_shot = true

[node name="PlayerDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource( 1 )

[node name="ImpactSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 6.0
pitch_scale = 2.06
script = ExtResource( 4 )
PitchRandomizeVal = 0.8

[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
[connection signal="timeout" from="DieAfter" to="." method="queue_free"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
